# frequencyDomainFilters

./: CMakeLists.txt  README.md  notch.c
include/bandFilter/: bandFilter.h
include/notch/: notch.h
include/sound/: wave.h
src/: bandFilter.cpp  notch.cpp
